--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -29,7 +29,28 @@
 .right #search {
   cursor: pointer;
 }
+.right #help {
+  display: none;
+  width: 100%;
+  height: 400px;
+  font-size: 40px;
+}
+.right #help #icon {
+  cursor: pointer;
+}
+.right #language {
+  display: none;
+  width: 40px;
+  height: 30px;
+}
+.right #language img {
+  width: 100%;
+}
 
 .active {
   display: block !important;
+}
+
+.active_transform {
+  transform: rotate(180deg);
 }/*# sourceMappingURL=style.css.map */
