--- a/assets/style/style.scss
+++ b/assets/style/style.scss
@@ -38,6 +38,29 @@
 
     #search{
         cursor: pointer;
+        
+        
+    }
+
+    #help{
+       display: none;
+       width:100%;
+       height: 400px;
+       font-size: 40px;
+
+        #icon{
+            cursor: pointer;
+        }
+    }
+
+    #language{
+        display: none;
+        width: 40px;
+        height: 30px;
+        img{
+            width: 100%;
+        }
+        
     }
 
     
@@ -45,4 +68,8 @@
 
 .active{
     display: block !important;
+}
+
+.active_transform{
+    transform: rotate(180deg);
 }
